@@ -13,11 +13,19 @@
     <parent>
         <groupId>ai.flowx</groupId>
         <artifactId>flowx-mvn-parent</artifactId>
-        <version>3.0.1</version>
+        <version>3.2.1</version>
     </parent>
 
 
     <dependencies>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ai.flowx.lib</groupId>
+            <artifactId>commons-definition-lib</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -29,7 +37,21 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ai.flowx.lib</groupId>
+            <artifactId>commons-testing-lib</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -47,6 +69,7 @@
     </profiles>
 
     <build>
+        <testSourceDirectory>${project.basedir}/src/test/it/java</testSourceDirectory>
         <defaultGoal>spring-boot:run</defaultGoal>
         <plugins>
             <plugin>
@@ -79,6 +102,7 @@
                 <configuration>
                     <argLine>
                         --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
